<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="#3500ffff"
android:layout_height="fill_parent"
android:layout_width="fill_parent"
android:padding="15dip"
android:orientation="horizontal">
<LinearLayout
android:orientation="vertical"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:layout_gravity="center"
android:paddingLeft="20dip"
android:paddingRight="20dip">
<TextView
        android:id="@+id/tvIsConnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"    
        android:textSize="18dp"
        android:textColor="#ff0000"
        android:layout_marginBottom="5dp"
        android:text="" />
<TextView
android:text="@string/main_title"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:layout_gravity="center"
android:layout_marginBottom="20dip"
android:textSize="24.5sp" />


<TextView
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:layout_gravity="center"
android:layout_marginBottom="20dip"
android:textSize="10sp" />
    
<TableLayout
android:background="#3000ffff"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:layout_gravity="center"
android:stretchColumns="*">
<TableRow>
<Button
android:id="@+id/send_button"
android:text="@string/send_label" />
</TableRow>
</TableLayout>
    
<TableLayout
android:background="#3000ffff"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:layout_gravity="center"
android:stretchColumns="*">
<TableRow>
<Button
android:id="@+id/level1_button"
android:text="@string/level1_label" />
</TableRow>
</TableLayout>
<!--  
<Button
android:id="@+id/level2_button"
android:text="@string/level2_label" />
-->

<!--
<TableRow>
<Button
android:id="@+id/level3_button"
android:text="@string/level3_label" />
<Button
android:id="@+id/level4_button"
android:text="@string/level4_label" />
</TableRow>
 -->
 <TableLayout
android:background="#3000ffff"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:layout_gravity="center"
android:stretchColumns="*">
<!--
<TableRow>
<Button
android:id="@+id/send_button"
android:text="@string/send_label" />
<Button
android:id="@+id/help_button"
android:text="@string/help_label" />
</TableRow>
-->
<TableRow>
<Button
android:id="@+id/help_button"
android:text="@string/help_label" />
 <!--  
android:id="@+id/refresh_button"
android:text="@string/refresh_label" />
-->
</TableRow>
<TableRow>
<Button
android:id="@+id/survey_button"
android:text="Survey" />
</TableRow>
</TableLayout>
<TableLayout
android:background="#3000ffff"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:layout_gravity="center"
android:stretchColumns="*">
<TableRow>
<Button
android:id="@+id/exit_button"
android:text="@string/exit_label" />
</TableRow>
</TableLayout>
</LinearLayout>
</ScrollView>